add CRUD note
