# src/docs/openApi.yaml
@@ -42,6 +42,82 @@ paths:
         500:
           description: Server error
 
+  /note/add:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - Note
+      summary: Add note .
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/noteAdd"
+      responses:
+        200:
+          description: Succes
+        500:
+          description: Server error
+
+  /note/update:
+    patch:
+      security:
+        - bearerAuth: []
+      tags:
+        - Note
+      summary: Update note .
+      parameters:
+        - in: query
+          name: noteId
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/noteUpdate"
+      responses:
+        200:
+          description: Succes
+        500:
+          description: Server error
+
+  /note/list:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Note
+      summary: Get note user.
+      responses:
+        200:
+          description: Succes
+        500:
+          description: Server error
+
+  /note/delete:
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Note
+      description: delete a note
+      parameters:
+        - in: query
+          name: noteId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Succes
+        500:
+          description: Server error
+
 components:
   securitySchemes:
     bearerAuth:
@@ -49,17 +125,53 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    noteUpdate:
+      type: object
+      properties:
+        task:
+          type: string
+          description: Task
+          example: Wash windows
+        startDate:
+          type: string
+          description: Start date
+          example: 2022-11-09
+        dueDate:
+          type: string
+          description: End Date
+          example: 2022-12-09
+        completed:
+          type: boolean
+          description: Task completed.
+          example: true
+
+    noteAdd:
+      type: object
+      properties:
+        task:
+          type: string
+          description: Task
+          example: Wash windows
+        startDate:
+          type: string
+          description: Start date
+          example: 2022-11-09
+        dueDate:
+          type: string
+          description: End Date
+          example: 2022-12-09
+
     registrationUser:
       type: object
       properties:
-        uaserName:
+        userName:
           type: string
           description: User first name
           example: Yra
         email:
           type: string
           description: User last name
-          example: Stell
+          example: pete7833@examples.com
         password:
           type: string
           description: User password
