# src/models/user.js
@@ -1,8 +1,10 @@
 import mongoose from "mongoose";
+const Schema = mongoose.Schema;
 
-const User = new mongoose.Schema({
-  uaserName: { type: String, required: true },
+const UserSchema = new Schema({
+  userName: { type: String, required: true },
   email: { type: String, unique: true, required: true },
   password: { type: String, required: true },
+  notes: [{ type: Schema.Types.ObjectId, ref: "Note" }],
 });
-export default mongoose.model("users", User);
+export default mongoose.model("User", UserSchema);
